idea1.usa_stockmarket_using_qqq_etf

--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -2,27 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class1\n"
+      "100000000\n"
      ]
     }
    ],
    "source": [
-    "print (\"class1\")\n"
+    "init_data = {\n",
+    "    \"date\" : \"2019-01-01\",\n",
+    "    \"money\" : {\n",
+    "        \"unit\" : \"won\",\n",
+    "        \"value\" : 100000000\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "today_money_convert_ratio = 1.2\n",
+    "def money_convert(money):\n",
+    "    dollor = money * today_money_convert_ratio\n",
+    "    return dollor\n",
+    "\n",
+    "# print(init_data)\n",
+    "print(init_data['money']['value'])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "700000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_data = {\n",
+    "    \"initial_date\" : \"2019-01-01\",\n",
+    "    \"money\" : {\n",
+    "        \"unit\": \"won\",\n",
+    "        \"amount\" : 10**8\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ratio = 1.2\n",
+    "def currency_convert(input_money,money_unit):\n",
+    "    # To do implement\n",
+    "    if money_unit == \"won\":\n",
+    "        new_money = input_money * ratio\n",
+    "    elif money_unit == \"dollor\" :\n",
+    "        new_money = input_money / ratio\n",
+    "    return new_money\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
