update python classification practice

--- a/lesson2.ipynb
+++ b/lesson2.ipynb
@@ -64,8 +64,192 @@
     "        money_won = str(money_dollar*init_data['ratio']['매매기준율']) + ' won'\n",
     "    return money_dollar\n",
     "\n",
+    "#변수선언\n",
+    "#\n",
+    "# today_money_convert_ratio = 1280 # r =1280\n",
+    "# def currency_change() : \n",
+    "#     dollar = init_data['money']['amount']/today_money_convert_ratio\n",
+    "#     return dollar\n",
+    "# print(currency_change(), \"$\")  \n",
+    "\n",
+    "#input 넣어주기\n",
+    "# money = init_data['money']['amount']\n",
+    "# def currency_change(money) : \n",
+    "#     dollar = money/today_money_convert_ratio\n",
+    "#     return dollar\n",
+    "# print(currency_change(money))  \n",
     "\n",
     "\n",
+    "# ratio = 1.2\n",
+    "# def currency_convert(input_money,money_unit):\n",
+    "#     # To do implement\n",
+    "#     if money_unit == \"won\":\n",
+    "#         new_money = input_money * ratio\n",
+    "#     elif money_unit == \"dollor\" :\n",
+    "#         new_money = input_money / ratio\n",
+    "#     return new_money\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'data' has no attribute 'parser'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\lesson2.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000002?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mdata\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000002?line=2'>3</a>\u001b[0m \u001b[39m# print (data)\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000002?line=4'>5</a>\u001b[0m config\u001b[39m=\u001b[39mdata\u001b[39m.\u001b[39;49mparser\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/lesson2.ipynb#ch0000002?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(config)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'data' has no attribute 'parser'"
+     ]
+    }
+   ],
+   "source": [
+    "# 연습2\n",
+    "# Dintionary 선언\n",
+    "# initial Data 하드코딩은 최대한 여기에만 할 수 있도록. amount 관련 정보는 i/f불가. \n",
+    "init_data = {\n",
+    "    'initial_date' : '2019.01.01',\n",
+    "    'money' : {\n",
+    "        'unit' : 'won',\n",
+    "        'amount' : 10**8\n",
+    "    },\n",
+    "    'ratio' : {\n",
+    "        \"매매기준율\" : 1300,\n",
+    "        \"수수료\" : 20\n",
+    "    }\n",
+    "} \n",
+    "print(init_data['money']['unit'])\n",
+    "print(init_data['money']['amount'],\"won\")\n",
+    "print(init_data['ratio']['매매기준율'])\n",
+    "\n",
+    "\n",
+    "# def로 함수 선언 \n",
+    "# 매수/매도에 따라 원화를 달러로 환전하기. \n",
+    "# dictionary 상 매매기준율, 수수료, amount 정보에 따라 다른 값 나옴\n",
+    "def currency_change_sell():\n",
+    "    ratio_sell = init_data['ratio']['매매기준율'] + init_data['ratio']['수수료']\n",
+    "    sell_dollar = init_data['money']['amount']/ratio_sell\n",
+    "    return sell_dollar\n",
+    "print(currency_change_sell(), \"$\")\n",
+    "\n",
+    "def currency_change_buy():\n",
+    "    ratio_buy = init_data['ratio']['매매기준율'] - init_data['ratio']['수수료']\n",
+    "    buy_dollar = init_data['money']['amount']/ratio_buy\n",
+    "    return buy_dollar\n",
+    "print(currency_change_buy(), \"$\")\n",
+    "\n",
+    "\n",
+    "# 아니면.. 이렇게 해도 됨 그냥 elif문 만들어봄\n",
+    "def currency_change():\n",
+    "    init_money = str(init_data['money']['amount']) + ' won'\n",
+    "    # python은 문자인지 숫자인지 자기도 모름. 정의해주어야 명확해짐 str로 정의해줌\n",
+    "    if init_money[-3:] == 'won' :\n",
+    "        money_dollar = str(init_money/init_data['ratio']['매매기준율']) +' $'\n",
+    "    elif init_money[-3:] != 'won' :\n",
+    "        money_won = str(money_dollar*init_data['ratio']['매매기준율']) + ' won'\n",
+    "    return money_dollar\n",
+    "\n",
+    "#변수선언\n",
+    "#\n",
+    "# today_money_convert_ratio = 1280 # r =1280\n",
+    "# def currency_change() : \n",
+    "#     dollar = init_data['money']['amount']/today_money_convert_ratio\n",
+    "#     return dollar\n",
+    "# print(currency_change(), \"$\")  \n",
+    "\n",
+    "#input 넣어주기\n",
+    "# money = init_data['money']['amount']\n",
+    "# def currency_change(money) : \n",
+    "#     dollar = money/today_money_convert_ratio\n",
+    "#     return dollar\n",
+    "# print(currency_change(money))  \n",
+    "\n",
+    "\n",
+    "# ratio = 1.2\n",
+    "# def currency_convert(input_money,money_unit):\n",
+    "#     # To do implement\n",
+    "#     if money_unit == \"won\":\n",
+    "#         new_money = input_money * ratio\n",
+    "#     elif money_unit == \"dollor\" :\n",
+    "#         new_money = input_money / ratio\n",
+    "#     return new_money\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Classification practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78125.0\n",
+      "75757.57575757576\n",
+      "7.8125e+26\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연습2\n",
+    "# Dintionary 선언\n",
+    "# initial Data 하드코딩은 최대한 여기에만 할 수 있도록. amount 관련 정보는 i/f불가. \n",
+    "class currency:\n",
+    "  def __init__(self):\n",
+    "    self.initial_date = '2019.01.01'\n",
+    "    self.money_unit = 'won'\n",
+    "    self.money_amount = 10 ** 8\n",
+    "    self.ssr = 1300 # sales standard rate\n",
+    "    self.spf = 20 #stock price fee\n",
+    "  def change_unit(self,ratio):\n",
+    "    get_dollar = self.money_amount/ratio\n",
+    "    return get_dollar\n",
+    "  def sell(self):\n",
+    "      ratio_sell = self.ssr + self.spf\n",
+    "      sell_dollar = self.change_unit(ratio_sell)\n",
+    "      return sell_dollar\n",
+    "  def buy(self):\n",
+    "      ratio_sell = self.ssr - self.spf\n",
+    "      sell_dollar = self.change_unit(ratio_sell)\n",
+    "      return sell_dollar\n",
+    "    \n",
+    "first_trade = currency()\n",
+    "second_trade = currency()\n",
+    "\n",
+    "second_trade.money_amount = 10 ** 30\n",
+    "print(first_trade.buy())\n",
+    "print(first_trade.sell())\n",
+    "\n",
+    "print(second_trade.buy())\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 아니면.. 이렇게 해도 됨 그냥 elif문 만들어봄\n",
+    "# def currency_change():\n",
+    "#     init_money = str(init_data['money']['amount']) + ' won'\n",
+    "#     # python은 문자인지 숫자인지 자기도 모름. 정의해주어야 명확해짐 str로 정의해줌\n",
+    "#     if init_money[-3:] == 'won' :\n",
+    "#         money_dollar = str(init_money/init_data['ratio']['매매기준율']) +' $'\n",
+    "#     elif init_money[-3:] != 'won' :\n",
+    "#         money_won = str(money_dollar*init_data['ratio']['매매기준율']) + ' won'\n",
+    "#     return money_dollar\n",
     "\n",
     "#변수선언\n",
     "#\n",
@@ -98,9 +282,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Blank:\n",
+    "    pass\n",
+    "\n",
+    "a = Blank()\n",
+    "print(dir(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Time.__init__ of <__main__.Time object at 0x00000240325664A0>>\n"
+     ]
+    }
+   ],
    "source": [
     "#okay 이제 장시간... import 부터,, \n",
     "import datetime\n",
@@ -121,13 +341,30 @@
     "            \"post_start\" : 16,\n",
     "            \"post_end\" : 18\n",
     "        }\n",
-    "        self.pre_market_start_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_start']))\n",
-    "        self.pre_market_end_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_end']))\n",
-    "        self.main_market_start_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_start']))\n",
-    "        self.main_market_end_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_end']))\n",
-    "        self.post_market_start_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_start']))\n",
-    "        self.post_market_end_time = self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_end']))\n",
+    "        self.pre_market_start_time =    self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_start']))\n",
+    "        self.pre_market_end_time =      self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['pre_end']))\n",
+    "        self.main_market_start_time =   self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_start']))\n",
+    "        self.main_market_end_time =     self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['main_end']))\n",
+    "        self.post_market_start_time =   self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_start']))\n",
+    "        self.post_market_end_time =     self.initial_date + datetime.timedelta(0,self.sec2hour(self.timelist['post_end']))\n",
     "        # print ( self.pre_market_start_time, self.pre_market_end_time, self.main_market_start_time, self.main_market_end_time, self.post_market_start_time, self.post_market_end_time)\n",
+    "    def verb_noun(self):\n",
+    "        pass\n",
+    "\n",
+    "    def value_get_from_list(self):\n",
+    "        pass\n",
+    "    def value2_get_from_list(self):\n",
+    "        pass\n",
+    "    def value_put_to_list(self):\n",
+    "        pass\n",
+    "    def get_value_from_list(self):\n",
+    "        pass\n",
+    "    def get_value2_from_list(self):\n",
+    "        pass\n",
+    "    [get, put, update, ]\n",
+    "    REST API\n",
+    "\n",
+    "\n",
     "\n",
     "    def sec2hour(self, input):\n",
     "        output = input * 3600\n",
@@ -137,6 +374,65 @@
     "print(a.__init__)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "캐릭터가 생성되었습니다.inyoung님 반갑습니다.\n",
+      "1\n",
+      "왼 팔은 정상입니다.\n",
+      "None\n",
+      "몬스터에게 공격 당했습니다. 데미지 0.3\n",
+      "0.7\n",
+      "왼 팔이 부상당했습니다.\n",
+      "None\n",
+      "포션을 먹고 회복되었습니다\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class human:\n",
+    "    def __init__(self):\n",
+    "        self.left_arm = 1\n",
+    "        self.right_arm = 1\n",
+    "        self.left_leg = 1\n",
+    "        self.right_leg = 1\n",
+    "        self.hair_style = ['curved','straight'] \n",
+    "\n",
+    "        print('캐릭터가 생성되었습니다.{user_name}님 반갑습니다.'.format(user_name = 'inyoung'))\n",
+    "\n",
+    "    def get_damage(self):\n",
+    "        if self.left_arm >= 0.3:\n",
+    "            self.left_arm -= 0.3\n",
+    "\n",
+    "    def get_hp_potion(self):\n",
+    "        if self.left_arm <= 1 :\n",
+    "            self.left_arm += 0.3\n",
+    "inyoung = human()\n",
+    "\n",
+    "print(inyoung.left_arm)\n",
+    "print('왼 팔은 정상입니다.')\n",
+    "print(inyoung.get_damage())\n",
+    "print('몬스터에게 공격 당했습니다. 데미지 0.3')\n",
+    "print(inyoung.left_arm)\n",
+    "print('왼 팔이 부상당했습니다.')\n",
+    "print(inyoung.get_hp_potion())\n",
+    "print('포션을 먹고 회복되었습니다')\n",
+    "print(inyoung.left_arm)\n",
+    "\n",
+    "class currency:\n",
+    "  def __init__(self):\n",
+    "    self.initial_date = '2019.01.01'\n",
+    "    self.money_unit = 'won'\n",
+    "    self.money_amount = 10 ** 8"
    ]
   }
  ],
