--- a/lesson2.ipynb
+++ b/lesson2.ipynb
@@ -350,7 +350,6 @@
     "        # print ( self.pre_market_start_time, self.pre_market_end_time, self.main_market_start_time, self.main_market_end_time, self.post_market_start_time, self.post_market_end_time)\n",
     "    def verb_noun(self):\n",
     "        pass\n",
-    "\n",
     "    def value_get_from_list(self):\n",
     "        pass\n",
     "    def value2_get_from_list(self):\n",
@@ -433,6 +432,90 @@
     "    self.initial_date = '2019.01.01'\n",
     "    self.money_unit = 'won'\n",
     "    self.money_amount = 10 ** 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2497839122.py, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    if < self.uad <     :   # self.uad가 매년 3월 마지막 일요일 ~ 10월 마지막 일요일 사이이면\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "class Time_:\n",
+    "    def __init__(self):\n",
+    "        self.utc_date = datetime.utcnow()\n",
+    "        self.ukd = self.utc_date + datetime.timedelta(hours= 9)    #utc_korea_date\n",
+    "        self.uad_not_summer = self.utc_date + datetime.timedelta(hours= -5)    #utc_america_date\n",
+    "        self.uad_summer = self.utc_date + datetime.timedelta(hours= -4)    #utc_america_date\n",
+    "        self.initial_date = self.uad + datetime.datetime(2019,1,1)\n",
+    "        self.timelist = {\n",
+    "            \"pre_start\" : 4,\n",
+    "            \"pre_end\" : 9.5,\n",
+    "            \"main_start\" : 9.5,\n",
+    "            \"main_end\" : 16,\n",
+    "            \"post_start\" : 16,\n",
+    "            \"post_end\" : 18\n",
+    "        }\n",
+    "    def summer_time(self):\n",
+    "        \"\"\"\n",
+    "        썸머타임일 때와 아닐 때 장시간 설정\n",
+    "        썸머타임 기간: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이일 때 장시간 설정\n",
+    "        썸머타임 기간 아닐 때: self.uad가 매년3월 마지막일요일 ~ 10월 마지막일요일 사이가 아닐 때 장시간 설정\n",
+    "        \"\"\"\n",
+    "        if < self.uad <  :\n",
+    "              self.pre_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_start'])\n",
+    "              self.pre_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['pre_end'])\n",
+    "              self.main_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_start'])\n",
+    "              self.main_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['main_end'])       \n",
+    "              self.post_start_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_start'])\n",
+    "              self.post_end_time_summer = self.uad_summer + datetime.timedelta(self.timelist['post_end'])\n",
+    "        elif self.uad < or self.uad >    :\n",
+    "              self.pre_start_time = self.uad + datetime.timedelta(self.timelist['pre_start'])\n",
+    "              self.pre_end_time = self.uad + datetime.timedelta(self.timelist['pre_end'])\n",
+    "              self.main_start_time = self.uad + datetime.timedelta(self.timelist['main_start'])\n",
+    "              self.main_end_time = self.uad + datetime.timedelta(self.timelist['main_end'])       \n",
+    "              self.post_start_time = self.uad + datetime.timedelta(self.timelist['post_start'])\n",
+    "              self.post_end_time = self.uad + datetime.timedelta(self.timelist['post_end'])\n",
+    "\n",
+    "    return (summer_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-03-27 00:00:00\n",
+      "2022-09-25 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "month = 4\n",
+    "first_day_of_april = datetime.datetime(2022,month,1).isoweekday()\n",
+    "new_datetime = datetime.datetime(2022,month,1) - datetime.timedelta(days=first_day_of_april)\n",
+    "print(new_datetime)\n",
+    "\n",
+    "\n",
+    "month = 10\n",
+    "first_day_of_april = datetime.datetime(2022,month,1).isoweekday()\n",
+    "new_datetime = datetime.datetime(2022,month,1) - datetime.timedelta(days=first_day_of_april)\n",
+    "print(new_datetime)\n"
    ]
   }
  ],
