euler_problem6_solved_06.18

--- a/euler.ipynb
+++ b/euler.ipynb
@@ -254,6 +254,7 @@
     }
    ],
    "source": [
+    "# 22.06.17 (금) \n",
     "# 1 ~ 10 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 2520입니다.\n",
     "# 그러면 1 ~ 20 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 얼마입니까?\n",
     "\n",
@@ -283,17 +284,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25164150\n",
+      "25164150\n"
+     ]
+    }
+   ],
    "source": [
+    "# 22.06.18 (토) \n",
     "# 1부터 100까지 \"제곱의 합\"과 \"합의 제곱\"의 차는?\n",
     "# 1부터 10까지 자연수를 각각 제곱해 더하면 다음과 같습니다 (제곱의 합).\n",
     "# 12 + 22 + ... + 102 = 385\n",
     "# 1부터 10을 먼저 더한 다음에 그 결과를 제곱하면 다음과 같습니다 (합의 제곱).\n",
     "# (1 + 2 + ... + 10)2 = 552 = 3025\n",
     "# 따라서 1부터 10까지 자연수에 대해 \"합의 제곱\"과 \"제곱의 합\" 의 차이는 3025 - 385 = 2640 이 됩니다.\n",
-    "# 그러면 1부터 100까지 자연수에 대해 \"합의 제곱\"과 \"제곱의 합\"의 차이는 얼마입니까?"
+    "# 그러면 1부터 100까지 자연수에 대해 \"합의 제곱\"과 \"제곱의 합\"의 차이는 얼마입니까?\n",
+    "\n",
+    "# answer_problem_first_try\n",
+    "total_a = 0\n",
+    "total_b = 0\n",
+    "for i in range(1,101):\n",
+    "    total_a = total_a + i**2\n",
+    "    total_b = total_b + i\n",
+    "print(total_b**2-total_a)\n",
+    "\n",
+    "# answer_problem_using_def\n",
+    "# 제곱의 합 : the sum of squares\n",
+    "# 합의 제곱 : the square of the sum\n",
+    "# abs() : 절대값\n",
+    "def get_sum_of_sq(): \n",
+    "    total = 0\n",
+    "    for i in range(1,101):\n",
+    "        total = total + i**2\n",
+    "    return total\n",
+    "def get_sq_of_sum():\n",
+    "    total = 0\n",
+    "    for i in range(1,101):\n",
+    "        total = total + i\n",
+    "    return total**2\n",
+    "print(abs(get_sum_of_sq()-get_sq_of_sum()))\n",
+    "\n"
    ]
   }
  ],
