euler_p[roblem9_solved

--- a/euler.ipynb
+++ b/euler.ipynb
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "# 22.06.16 (목) \n",
+    "# 22.06.16 (목) problem4\n",
     "# 세자리 수를 곱해 만들 수 있는 가장 큰 대칭수\n",
     "# 앞에서부터 읽을 때나 뒤에서부터 읽을 때나 모양이 같은 수를 대칭수(palindrome)라고 부릅니다.\n",
     "# 두 자리 수를 곱해 만들 수 있는 대칭수 중 가장 큰 수는 9009 (= 91 × 99) 입니다.\n",
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "# 22.06.17 (금) \n",
+    "# 22.06.17 (금) problem5\n",
     "# 1 ~ 10 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 2520입니다.\n",
     "# 그러면 1 ~ 20 사이의 어떤 수로도 나누어 떨어지는 가장 작은 수는 얼마입니까?\n",
     "\n",
@@ -297,7 +297,7 @@
     }
    ],
    "source": [
-    "# 22.06.18 (토) \n",
+    "# 22.06.18 (토) problem6 ★★☆☆☆\n",
     "# 1부터 100까지 \"제곱의 합\"과 \"합의 제곱\"의 차는?\n",
     "# 1부터 10까지 자연수를 각각 제곱해 더하면 다음과 같습니다 (제곱의 합).\n",
     "# 12 + 22 + ... + 102 = 385\n",
@@ -331,6 +331,173 @@
     "print(abs(get_sum_of_sq()-get_sq_of_sum()))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'i' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\4028\\Documents\\python\\lesson1\\euler.ipynb Cell 1'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000000?line=8'>9</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000000?line=10'>11</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000000?line=11'>12</a>\u001b[0m        i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000000?line=12'>13</a>\u001b[0m        count \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/4028/Documents/python/lesson1/euler.ipynb#ch0000000?line=13'>14</a>\u001b[0m        \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m10001\u001b[39m):\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.06.19 (일) problem7 ★★★☆☆\n",
+    "# 10001번째의 소수 \n",
+    "# 소수를 크기 순으로 나열하면 2, 3, 5, 7, 11, 13, ... 과 같이 됩니다.\n",
+    "# 이 때 10,001번째의 소수를 구하세요.\n",
+    "\n",
+    "\n",
+    "def decimal(nth):\n",
+    "    for i in range(2,nth):\n",
+    "        if nth % i == 0:\n",
+    "            return 0 \n",
+    "\n",
+    "\n",
+    "i += 1\n",
+    "count = 0\n",
+    "for j in range(1,10001):\n",
+    "    if j % i == 0:\n",
+    "        count += 1\n",
+    "    elif count == 10:\n",
+    "            print(i)\n",
+    "            break\n",
+    "\n",
+    "# 푸는 중.. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23514624000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.06.２０ (월) problem８ ★★★★☆\n",
+    "# 1000자리 수 안에서 연속된 13개 숫자 곱의 최댓값 \n",
+    "# 다음은 연속된 1000자리 수입니다 (읽기 좋게 50자리씩 잘라 놓음).\n",
+    "# # 여기서 붉게 표시된 71112의 경우 연속한 5개 숫자 7, 1, 1, 1, 2를 모두 곱하면 14입니다.\n",
+    "# 또, 그 다음 연속한 5개 숫자 11121의 경우 1, 1, 1, 2, 1을 모두 곱하면 2입니다.\n",
+    "# 이런 식으로 맨 처음 (7 × 3 × 1 × 6 × 7 = 882) 부터 맨 끝 (6 × 3 × 4 × 5 × 0 = 0) 까지 연속한 5개 숫자의 곱을 구할 수 있습니다.\n",
+    "# 이렇게 구할 수 있는 연속한 5개 숫자의 곱 중에서 가장 큰 값은 40824 입니다.\n",
+    "# 연속한 4개 숫자의 곱 중에서 가장 큰 값은 파랗게 표시된 9 × 9 × 8 × 9 = 5832 입니다.\n",
+    "# 위의 1000자리 수에서 연속한 13개 숫자의 곱이 가장 큰 값은 얼마입니까?\n",
+    "\n",
+    "\n",
+    "number = '''73167176531330624919225119674426574742355349194934\n",
+    "96983520312774506326239578318016984801869478851843\n",
+    "85861560789112949495459501737958331952853208805511\n",
+    "12540698747158523863050715693290963295227443043557\n",
+    "66896648950445244523161731856403098711121722383113\n",
+    "62229893423380308135336276614282806444486645238749\n",
+    "30358907296290491560440772390713810515859307960866\n",
+    "70172427121883998797908792274921901699720888093776\n",
+    "65727333001053367881220235421809751254540594752243\n",
+    "52584907711670556013604839586446706324415722155397\n",
+    "53697817977846174064955149290862569321978468622482\n",
+    "83972241375657056057490261407972968652414535100474\n",
+    "82166370484403199890008895243450658541227588666881\n",
+    "16427171479924442928230863465674813919123162824586\n",
+    "17866458359124566529476545682848912883142607690042\n",
+    "24219022671055626321111109370544217506941658960408\n",
+    "07198403850962455444362981230987879927244284909188\n",
+    "84580156166097919133875499200524063689912560717606\n",
+    "05886116467109405077541002256983155200055935729725\n",
+    "71636269561882670428252483600823257530420752963450'''\n",
+    "## ''' ... ''' 작은따옴표 3개\n",
+    "\n",
+    "greatest_product = 0\n",
+    "numstring = number.strip().replace('\\n', '')\n",
+    "## strip 함수 : 문자열 양 끝에 있는 공백제거\n",
+    "## replace 함수 : 숫자들 줄내림 시 \\n을 ''로 바꿔줌\n",
+    "\n",
+    "\n",
+    "for i in range(len(numstring)):\n",
+    "    product = 1\n",
+    "    # 13개 숫자. 문자열\n",
+    "    substring = numstring[i:i+13]  \n",
+    "    for digit in substring:\n",
+    "        # 정수로 바꿔주고 서로 곱해주기. 곱셈이므로 순서 상관없음\n",
+    "        product = product*int(digit)  \n",
+    "     # max값 구하는 방법의 또다른 표현임\n",
+    "    if product > greatest_product:  \n",
+    "        greatest_product = product\n",
+    "\n",
+    "print(greatest_product)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 375 425\n",
+      "31875000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.06.２1 (화) problem9 ★★★☆☆\n",
+    "# a + b + c = 1000 이 되는 피타고라스 수\n",
+    "# 세 자연수 a, b, c 가 피타고라스 정리 a2 + b2 = c2 를 만족하면 피타고라스 수라고 부릅니다 (여기서 a < b < c ).\n",
+    "# 예를 들면 3**2 + 4**2 = 9 + 16 = 25 = 5**2이므로 3, 4, 5는 피타고라스 수입니다.\n",
+    "# a + b + c = 1000 인 피타고라스 수 a, b, c는 한 가지 뿐입니다. 이 때, a × b × c 는 얼마입니까?\n",
+    "\n",
+    "# a = int()\n",
+    "# b = int()\n",
+    "# a + b + c == 1000\n",
+    "# c = 1000-a-b = 1000-(a+b)\n",
+    "# c**2 == (1000-a-b)**2 == a**2 + b**2 \n",
+    "# a**2 + 2*a*b + b**2 == (a+b)**2\n",
+    "# (a+b)**2 - 2*a*b == (1000-a-b)**2\n",
+    "# a < b < c\n",
+    "# a*b*c = ?\n",
+    "\n",
+    "# a < b 이므로 a, b range 설정 아래와 같음 \n",
+    "for b in range (1,1000):\n",
+    "    for a in range (1,b):\n",
+    "        if (1000-a-b)**2 == a**2 + b**2 : \n",
+    "            print (a,b,1000-a-b)\n",
+    "            print (a*b*(1000-a-b))\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 22.06.２2 (수) problem10 ★★★★☆\n",
+    "# 이백만 이하 소수의 합\n",
+    "# 10 이하의 소수를 모두 더하면 2 + 3 + 5 + 7 = 17 이 됩니다.\n",
+    "# 이백만(2,000,000) 이하 소수의 합은 얼마입니까?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
